--- a/Task_Manager_Frontend/src/index.css
+++ b/Task_Manager_Frontend/src/index.css
@@ -1,13 +1,23 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: "JetBrainsMono";
+  src: local("JetBrainsMono-Regular"),
+  url(./assets/fonts/JetBrainsMono-Regular.ttf);
+}
+
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /* font-family: system-ui, Avenir, Helvetica, Arial, sans-serif; */
+  font-family: JetBrainsMono;
+
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  /* color: rgba(255, 255, 255, 0.87); */
+
+  color: #3dd771;
   background-color: #242424;
 
   font-synthesis: none;
@@ -16,14 +26,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
   color: #535bf2;
-}
+} */
 
 body {
   margin: 0;
@@ -50,7 +60,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: lightblue;
 }
 button:focus,
 button:focus-visible {
