--- a/Task_Manager_Frontend/src/index.css
+++ b/Task_Manager_Frontend/src/index.css
@@ -17,7 +17,7 @@
   color-scheme: light dark;
   /* color: rgba(255, 255, 255, 0.87); */
 
-  color: #3dd771;
+  color: #43504F;
   background-color: #242424;
 
   font-synthesis: none;
