Small tweaks for tracking task data and file deletion
- added setters for tracking data input for files and added a function for removing attachments from the attachments field

--- a/Task_Manager_Frontend/src/App.css
+++ b/Task_Manager_Frontend/src/App.css
@@ -199,6 +199,16 @@ input[type="file"] {
   background-color: var(--mint_green_2)
 }
 
+.attachments_wrapper {
+  width: 250px;
+}
+
+.delete_button{
+  border: 2px solid var(--midnight_green);
+  height: 20px!important;
+  width: 20px!important;
+  padding: 0;
+}
 
 .logo {
   height: 6em;
