--- a/Task_Manager_Frontend/src/App.css
+++ b/Task_Manager_Frontend/src/App.css
@@ -46,6 +46,13 @@
   transition: border-color 0.25s;
 }
 
+.back_button {
+  width: fit-content!important;
+  height: 100%!important;
+  padding: 0;
+  font-size: xx-large;
+}
+
 .landing_buttons:hover {
   border-color: lightblue;
 }
@@ -189,6 +196,12 @@ input[type="file"] {
 
 .task_accept_small {
   background: var(--mint_green_2);
+  border: 2px solid var(--midnight_green);
+  height: 25px;
+  width: fit-content;
+}
+
+.task_view{
   border: 2px solid var(--midnight_green);
   height: 25px;
   width: fit-content;
